--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nextui-org/card": "^2.0.24",
     "@nextui-org/navbar": "^2.0.27",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/system": "^2.0.15",
