--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
