--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "movieunivers",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@nextui-org/card": "^2.0.24",
-    "@nextui-org/navbar": "^2.0.27",
-    "@nextui-org/react": "^2.2.10",
-    "@nextui-org/system": "^2.0.15",
-    "@nextui-org/theme": "^2.1.18",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "firebase": "^10.10.0",
-    "framer-motion": "^11.0.23",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-loader-spinner": "^6.1.6",
-    "react-rating-stars-component": "^2.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "sweetalert": "^2.1.2",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.3"
-  }
+   "name": "movieunivers",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@heroui/card": "2.2.10",
+      "@heroui/navbar": "2.2.9",
+      "@heroui/react": "2.6.14",
+      "@heroui/system": "2.4.7",
+      "@heroui/theme": "2.4.6",
+      "@testing-library/jest-dom": "^5.17.0",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "firebase": "^10.10.0",
+      "framer-motion": "^11.0.23",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-loader-spinner": "^6.1.6",
+      "react-rating-stars-component": "^2.2.0",
+      "react-router-dom": "^6.22.3",
+      "react-scripts": "^5.0.1",
+      "sweetalert": "^2.1.2",
+      "web-vitals": "^2.1.4"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "devDependencies": {
+      "tailwindcss": "^3.4.3"
+   }
 }
