--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "dependencies": {
       "@heroui/card": "2.2.10",
       "@heroui/navbar": "2.2.9",
+      "@heroui/pagination": "^2.2.9",
       "@heroui/react": "2.6.14",
       "@heroui/system": "2.4.7",
       "@heroui/theme": "2.4.6",
